--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
-  "name": "react-timer",
+  "name": "react-timer-app",
+  "description": "Simple timer app built on top of React and Redux.",
+  "author": "Tanveer Karim <contact@tkarimdesign.com>",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
+  "homepage": "https://github.com/tanmancan/react-timer-app#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tanmancan/react-timer-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tanmancan/react-timer-app/issues"
+  },
+  "keywords": [
+    "react",
+    "timer",
+    "timer-tracking"
+  ],
   "dependencies": {
     "materialize-css": "^1.0.0-beta",
+    "random-words": "^1.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
@@ -17,7 +34,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "random-words": "^1.1.0",
     "redux-devtools": "^3.4.1"
   }
 }
