--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build:base": "react-scripts build",
-    "release:patch": "npm run build:base && npm version patch -m 'Release v%s'",
-    "release:minor": "npm run build:base && npm version minor -m 'Release v%s'",
-    "release:major": "npm run build:base && npm version major -m 'Release v%s'",
+    "release:patch": "npm version patch -m 'Release v%s'",
+    "release:minor": "npm version minor -m 'Release v%s'",
+    "release:major": "npm version major -m 'Release v%s'",
+    "version": "npm run build:base",
     "postversion": "git push && git push --tag",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
