--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "version": "npm run build",
     "postversion": "git push && git push --tag",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "doc": "jsdoc src -r -d docs"
   },
   "devDependencies": {
+    "jsdoc": "^3.5.5",
     "redux-devtools": "^3.4.1"
   }
 }
