--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "release:patch": "npm version patch -m 'Release v%s'",
+    "release:patch": "npm version patch -m 'Release v%s'gst",
     "release:minor": "npm version minor -m 'Release v%s'",
     "release:major": "npm version major -m 'Release v%s'",
     "preversion": "npm run test",
@@ -37,7 +37,7 @@
     "postversion": "git push && git push --tag",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "doc": "jsdoc -c .jsdoc.json"
+    "doc": "jsdoc -c .jsdoc.json && cp react-timer.png docs/react-timer.png"
   },
   "devDependencies": {
     "jsdoc": "^3.5.5",
