--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-tracker",
-  "description": "Simple timer app built on top of React and Redux.",
+  "description": "Simple time tracker app built on top of React and Redux.",
   "author": "Tanveer Karim <contact@tkarimdesign.com>",
   "version": "1.3.0",
   "license": "MIT",
