--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "redux": "^3.7.2"
   },
   "scripts": {
@@ -37,7 +37,8 @@
     "postversion": "git push && git push --tag",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "doc": "jsdoc -c .jsdoc.json && cp app.png docs/app.png"
+    "doc": "jsdoc -c .jsdoc.json && cp app.png docs/app.png",
+    "reinstall": "rm -rf node_modules && npm install"
   },
   "devDependencies": {
     "jsdoc": "^3.5.5",
